Particles en mi foto y subí la otra imagen que será cambiada por una foto de mi calle

--- a/index.html
+++ b/index.html
@@ -16,14 +16,18 @@
 
     <main class="home-main ">
 
-        <div class="inicio">
+        <div class="pages">
+
+            <div class="screen">
+                <img src="assets/img/street.jpg" alt="">
+            </div>
 
             <div class="img">
                 <img src="assets/img/Logo.png" title="Logo de mi empresa" alt="">
             </div>
 
             <div class="home-main-text">
-                <p>Bienvenidos a </p>
+                <p>Bienvenidos a mi sitio web</p>
             </div>
 
             <div class="enlaces">
@@ -40,6 +44,10 @@
         </div>
 
         <div class="my_photo">
+            <div id="particles-js"></div>
+            <script src="js/particles.min.js"></script>
+            <script src="js/app.js"></script>
+
             <img src="assets/img/Desarrollador.jpg" alt="">
         </div>
 
