Queda colocar la foto y las partículas subiendo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="pages">
 
             <div class="img">
-                <img src="assets/img/Logo.png" title="Logo de mi empresa" alt="">
+                <img src="assets/img/Logo.png" alt="">
             </div>
 
             <div class="home-main-text">
