Ya quedó puesta la imagen en todo el lado derecho

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Inicio</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="media__queries/media-425.css" media="(max-width: 425px)">
     <link rel="stylesheet" href="media__queries/media-768.css" media="(max-width: 768px)">
     <link rel="stylesheet" href="media__queries/media-1024.css" media="(max-width: 1024px)">
@@ -40,11 +40,10 @@
         </div>
 
         <div class="my_photo">
-            <div id="particles-js"></div>
-            <script src="js/particles.min.js"></script>
-            <script src="js/app.js"></script>
 
-            <img src="assets/img/Desarrollador.jpg" alt="">
+            <div class="photo">
+                <!-- <img src="assets/img/Desarrollador.jpg" alt=""> -->
+            </div>
         </div>
 
     </main>
