Nuevo diseño de página de inicio

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 
         <div class="pages">
 
-            <div class="img">
+            <!-- <div class="img">
                 <img src="assets/img/Logo.png" alt="">
-            </div>
+            </div> -->
 
             <div class="home-main-text">
-                <p>Bienvenidos a mi sitio web</p>
+                <p>Bienvenidos a <span>INTELLART</span></p>
             </div>
 
             <div class="enlaces">
@@ -39,11 +39,11 @@
             </div>
         </div>
 
-        <div class="my_photo">
-
-            <div class="photo">
-                <!-- <img src="assets/img/Desarrollador.jpg" alt=""> -->
-            </div>
+        <div class="mensaje">
+            <p>
+                "Si quieres entender a una persona, no escuches sus palabras, observa su comportamiento"
+                <br><br> Albert Einstein.
+            </p>
         </div>
 
     </main>
