Bajé y agregué al nombre de mi empresa

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div> -->
 
             <div class="home-main-text">
-                <p>Bienvenidos a <span>INTELLART</span></p>
+                <p>Bienvenidos a <br><span>INTELLARTSTORE</span></p>
             </div>
 
             <div class="enlaces">
