--- a/store.html
+++ b/store.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda</title>
     <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="media__queries/media-425.css">
+    <link rel="stylesheet" href="media__queries/media-768.css">
+    <link rel="stylesheet" href="media__queries/media-1024.css">
     <link rel="icon" href="assets/img/logo-pestaña.ico">
     <link rel="stylesheet" href="css/font/flaticon.css">
 
