Ajustando el menu hamburguesa

--- a/store.html
+++ b/store.html
@@ -25,9 +25,9 @@
 
     <header class="header">
 
-        <div id="menu-h">
+        <!-- <div id="menu-h">
             <img src="assets/img/Logo.png" alt="Logo de mi empresa" title="Logo de mi empresa">
-        </div>
+        </div> -->
 
         <div id="menu-h">
             <ul>
