Poniendo enlaces a Categorías y efecto hover

--- a/store.html
+++ b/store.html
@@ -25,9 +25,9 @@
 
     <header class="header">
 
-        <!-- <div id="menu-h">
-            <img src="assets/img/Logo.png" alt="Logo de mi empresa" title="Logo de mi empresa">
-        </div> -->
+        <div id="menu-h">
+            <img src="assets/img/logo-pestaña.png" alt="Logo de mi empresa" title="IntellArtStore">
+        </div>
 
         <div id="menu-h">
             <ul>
@@ -38,21 +38,17 @@
         </div>
 
         <div id="menu-h">
-            <ul>
-                <li>
-                    <!-- <a href="#">Categor&iacute;as</a> -->
-                    <button class="desplegar">
-                        Category
-                    </button>
 
-                    <ul class="sub-menu">
-                        <a href="#accesorios-celular">Accesorios celulares</a>
-                        <a href="#accesorios-laptop">Accesorios computadores</a>
-                        <a href="#accesorios-usados">Accesorios usados</a>
-                    </ul>
+            <button class="desplegar">
+                Categorias <i class="fa fa-caret-down"></i>
+            </button>
 
-                </li>
+            <ul class="sub-menu">
+                <a href="#accesorios-celular">Accesorios celulares</a>
+                <a href="#accesorios-laptop">Accesorios computadores</a>
             </ul>
+
+
         </div>
 
         <div id="menu-h">
@@ -126,7 +122,7 @@
         <div class="mi_trabajo">
 
             <div class="accesorios">
-                <div class="titulo">
+                <div class="titulo" id="accesorios-celular">
                     <h2>Accesorios para celulares</h2>
                 </div>
                 <div class="celulares">
@@ -159,7 +155,7 @@
 
                 </div>
 
-                <div class="titulo-computadores">
+                <div class="titulo-computadores" id="accesorios-laptop">
                     <h2>Accesorios para computadores</h2>
                 </div>
                 <div class="pc">
