--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta charset="utf-8">
     <title>Inicio</title>
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="media__queries/media-425.css" media="(max-width: 425px)">
-    <link rel="stylesheet" href="media__queries/media-768.css" media="(max-width: 768px)">
-    <link rel="stylesheet" href="media__queries/media-1024.css" media="(max-width: 1024px)">
     <link rel="stylesheet" href="css/font/flaticon.css">
     <link rel="icon" href="assets/img/logo-pestaña.ico">
 </head>
@@ -18,12 +15,8 @@
 
         <div class="pages">
 
-            <!-- <div class="img">
-                <img src="assets/img/Logo.png" alt="">
-            </div> -->
-
             <div class="home-main-text">
-                <p>Bienvenidos a <br><span>INTELLARTSTORE</span></p>
+                <p>Bienvenidos a <br><span>My Store</span></p>
             </div>
 
             <div class="enlaces">
@@ -36,6 +29,9 @@
                     <a href="store.html">Tienda</a>
                 </div>
 
+                <div class="show">
+                    <img src="assets/img/flechaiz.png" alt="">
+                </div>
             </div>
         </div>
 
