--- a/store.html
+++ b/store.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda</title>
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/store.css">
     <link rel="stylesheet" href="media__queries/media-425.css">
     <link rel="stylesheet" href="media__queries/media-768.css">
     <link rel="stylesheet" href="media__queries/media-1024.css">
