Nuevo estilo para el inicio

--- a/index.html
+++ b/index.html
@@ -11,9 +11,31 @@
 
 <body>
 
-    <main class="home-main ">
+    <main>
 
-        <div class="pages">
+        <section class="fondo">
+
+        </section>
+
+        <section class="welcome">
+            <h1>
+                Bienvenidos
+            </h1>
+        </section>
+
+        <section class="tiempo">
+
+        </section>
+
+        <section class="menu">
+
+        </section>
+
+        <section class="redes">
+
+        </section>
+        <!-- 
+        <section class="pages">
 
             <div class="home-main-text">
                 <p>Bienvenidos a <br><span>My Store</span></p>
@@ -33,14 +55,14 @@
                     <img src="assets/img/flechaiz.png" alt="">
                 </div>
             </div>
-        </div>
+        </section>
 
         <div class="mensaje">
             <p>
                 "Si quieres entender a una persona, no escuches sus palabras, observa su comportamiento"
                 <br><br> Albert Einstein.
             </p>
-        </div>
+        </div> -->
 
     </main>
 </body>
