--- a/index.html
+++ b/index.html
@@ -32,8 +32,12 @@
         </section>
 
         <section class="redes">
-
+            <a href="https://www.facebook.com/alex.rio20/" target="_blank"><img src="assets/img/facebook.png" alt="Imagen de red social Facebook" title="Mi perfil en Facebook"></a>
+            <a href="https://twitter.com/julialexes" target="_blank"><img src="assets/img/twitter.png" alt=""></a>
+            <a href="https://wa.me/c/573174503604"><img src="assets/img/whatsapp.png" alt=""></a>
         </section>
+
+
         <!-- 
         <section class="pages">
 
