Botón hamburguesa puesto

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <main>
-
+        <i class="icon-menu burger-button" id="burger-menu"></i>
         <section class="welcome">
             <h1>
                 Bienvenidos
