Agregando logo de twitter

--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
 
         <section class="redes">
             <a href="https://www.facebook.com/alex.rio20/" target="_blank"><img src="assets/img/facebook.png" alt="Imagen de red social Facebook" title="Mi perfil en Facebook"></a>
-            <a href="https://twitter.com/julialexes" target="_blank"><img src="assets/img/twitter.png" alt="Imagen de red social"></a>
+
+            <a href="https://twitter.com/julialexes" target="_blank">
+                <img class="tui" src="assets/img/network/twitter.png" alt="Imagen de red social">
+            </a>
+
             <a href="https://wa.me/c/573174503604"><img src="assets/img/whatsapp.png" alt="Imagen de red social"></a>
         </section>
 
