Volvía al diseño anterior

--- a/index.html
+++ b/index.html
@@ -11,38 +11,8 @@
 
 <body>
 
-    <main>
-        <i class="icon-menu burger-button" id="burger-menu"></i>
-        <section class="welcome">
-            <h1>
-                Bienvenidos
-            </h1>
-        </section>
+    <main class="home-main">
 
-        <section class="tiempo">
-
-        </section>
-
-        <section class="menu">
-
-        </section>
-
-        <section class="redes">
-            <a href="https://www.facebook.com/alex.rio20/" target="_blank">
-                <img src="assets/img/facebook.png" alt="Imagen de red social Facebook" title="Mi perfil en Facebook">
-            </a>
-
-            <a href="https://twitter.com/julialexes" target="_blank">
-                <img class="tui" src="assets/img/network/twitter.png" alt="Imagen de red social">
-            </a>
-
-            <a href="https://wa.me/c/573174503604">
-                <img src="assets/img/whatsapp.png" alt="Imagen de red social">
-            </a>
-        </section>
-
-
-        <!-- 
         <section class="pages">
 
             <div class="home-main-text">
@@ -63,14 +33,15 @@
                     <img src="assets/img/flechaiz.png" alt="">
                 </div>
             </div>
-        </section>
+            <!-- 
+            <div class="mensaje">
+                <p>
+                    "Si quieres entender a una persona, no escuches sus palabras, observa su comportamiento"
+                    <br><br> Albert Einstein.
+                </p>
+            </div> -->
 
-        <div class="mensaje">
-            <p>
-                "Si quieres entender a una persona, no escuches sus palabras, observa su comportamiento"
-                <br><br> Albert Einstein.
-            </p>
-        </div> -->
+        </section>
 
     </main>
 </body>
