Agregando imagen de fondo a index

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <main>
 
         <section class="pages">
+            <div class="img"> </div>
 
             <div class="home-main-text">
                 <p>Bienvenidos a <br><span>My Store</span></p>
+
             </div>
 
             <div class="enlaces">
@@ -29,21 +31,23 @@
                     <a href="store.html">Tienda</a>
                 </div>
 
-                <div class="show">
+                <!-- <div class="show">
                     <img src="assets/img/flechaiz.png" alt="">
-                </div>
+                </div> -->
             </div>
-            <!-- 
+
+
+        </section>
+
+    </main>
+
+    <!-- 
             <div class="mensaje">
                 <p>
                     "Si quieres entender a una persona, no escuches sus palabras, observa su comportamiento"
                     <br><br> Albert Einstein.
                 </p>
             </div> -->
-
-        </section>
-
-    </main>
 </body>
 
 </html>
