--- a/perfil.html
+++ b/perfil.html
@@ -11,9 +11,9 @@
 
 <body>
 
-    <div id="particles-js"></div>
+    <!-- <div id="particles-js"></div>
     <script src="js/particles.min.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/app.js"></script> -->
 
     <header class="contenedor-header">
 
