--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
     <main>
 
         <section class="pages">
-            <div class="img"> </div>
+            <!-- <div class="img"> </div> -->
 
             <div class="home-main-text">
                 <p>Bienvenidos a <br><span>My Store</span></p>
-
             </div>
 
             <div class="enlaces">
