Botones ma o meno arreglados

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="mediaquery/media-425.css">
     <link rel="stylesheet" href="css/font/flaticon.css">
     <link rel="icon" href="assets/img/logo-pestaña.ico">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
