Agregando carpeta de estilos

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Inicio</title>
     <!-- <link rel="stylesheet" href="css/index.css"> -->
-    <link rel="stylesheet" href="mediaquery/media-425.css">
+    <link rel="stylesheet" href="mediaquery_index/media-425.css">
     <link rel="stylesheet" href="css/font/flaticon.css">
     <link rel="icon" href="assets/img/logo-pestaña.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com">
