Coloqué color combinado en el header y footer

--- a/store.html
+++ b/store.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda</title>
     <link rel="stylesheet" href="css/store.css">
-
+    <link rel="stylesheet" href="mediaquery_store/media_425.css">
     <link rel="icon" href="assets/img/logo-pestaña.ico">
     <link rel="stylesheet" href="css/font/flaticon.css">
 
