Borrando estilos que no dejan ver bien la página de la tienda en modo mobile

--- a/store.html
+++ b/store.html
@@ -5,25 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda</title>
-    <link rel="stylesheet" href="css/store.css">
-    <link rel="stylesheet" href="mediaquery_store/media_320.css">
-    <link rel="stylesheet" href="mediaquery_store/media_425.css">
+    <!-- <link rel="stylesheet" href="css/store.css"> -->
+    <link rel="stylesheet" href="mediaquery_store/media_320px.css" media="(min-width: 320px) AND (max-width: 768px)">
+    <!-- <link rel="stylesheet" href="mediaquery_store/media_425.css"> -->
     <link rel="icon" href="assets/img/logo-pestaña.ico">
     <link rel="stylesheet" href="css/font/flaticon.css">
-
-    <!-- para trabajar con jquery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
     <i class="icon-menu burger-button" id="burger-menu"></i>
 
     <header class="header">
 
-        <div id="menu-h">
-            <img src="assets/img/logo-pestaña.png" alt="Logo de mi empresa" title="IntellArtStore">
-        </div>
+
 
         <div id="menu-h">
             <ul>
@@ -90,6 +86,7 @@
     </header>
 
     <main class="contenido">
+
 
         <div class="presentacion">
 
@@ -526,8 +523,11 @@
             <h1>Cont&aacute;ctame:</h1>
             <h3>julii1295@gmail.com</h3>
             <a href="https://www.facebook.com/alex.rio20/" target="_blank"><img src="assets/img/facebook.png" alt="Imagen de red social Facebook" title="Mi perfil en Facebook"></a>
-            <a href="https://twitter.com/julialexes" target="_blank"><img src="assets/img/twitter.png" alt=""></a>
-            <a href="https://wa.me/c/573174503604"><img src="assets/img/whatsapp.png" alt=""></a>
+            <a href="https://twitter.com/julialexes" target="_blank"><img src="assets/img/network/twitter.svg" alt="Imagen de red social Twitter" title="Mi perfil en Twitter"></a>
+            <a href="https://wa.me/c/573174503604"><img src="assets/img/whatsapp.png" alt="Imagen de red social de whatsapp" title="Mi cuenta de whatsapp"></a>
+            <!-- <div class="logo">
+                <img src="assets/img/logo-pestaña.png" alt="Logo de mi empresa" title="IntellArtStore">
+            </div> -->
         </div>
 
     </footer>
