--- a/store.html
+++ b/store.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda</title>
-    <!-- <link rel="stylesheet" href="css/store.css"> -->
+    <link rel="stylesheet" href="css/store.css">
     <link rel="stylesheet" href="mediaquery_store/media_320px.css" media="(min-width: 320px) AND (max-width: 768px)">
     <!-- <link rel="stylesheet" href="mediaquery_store/media_425.css"> -->
     <link rel="icon" href="assets/img/logo-pestaña.ico">
