--- a/store.html
+++ b/store.html
@@ -85,6 +85,10 @@
 
     <main class="contenido">
 
+        <div class="logo">
+            <img src="assets/img/logo-pestaña.png" alt="">
+        </div>
+
         <div class="presentacion">
 
             <div class="preacce p1">
