Colocando en filas mi foto y el mensaje en perfil

--- a/perfil.html
+++ b/perfil.html
@@ -25,7 +25,9 @@
         <div class="header1 ">
             <a href="store.html " class="inicio ">Tienda</a>
         </div>
-
+        <div class="header1 ">
+            <a href="blogs.html" class="inicio ">Mi Blog</a>
+        </div>
     </header>
 
     <main class="contenido ">
