--- a/perfil.html
+++ b/perfil.html
@@ -33,10 +33,15 @@
     <main class="contenido ">
 
         <div class="presentacion ">
-            <div class="img ">
-                <img class="img-photo " src="assets/img/Desarrollador.jpg " alt=" ">
+
+            <div class="logo">
+                <img src="assets/img/Logo.png" alt="Logo de mi empresa">
             </div>
-            <div class="descripcion ">
+            <div class="img ">
+                <img class="img-photo " src="assets/img/Desarrollador.jpg " alt="Foto de desarrollador">
+            </div>
+
+            <div class=" descripcion ">
                 <h2>Hola, soy Juli&aacute;n</h2>
                 <p>
                     Desde niño me ha gustado tocar guitarra, tambi&eacute;n me dedico a leer porque me gusta enterarme de los hechos que han marcado la actualidad. <br>Espero sea de su agrado mi sitio 😉
