--- a/html/perfil.html
+++ b/html/perfil.html
@@ -11,7 +11,7 @@
 
     <!-- estilos -->
     <!-- <link rel="stylesheet" href="css/perfil.css"> -->
-    <link rel="stylesheet" href="mediaquery_perfil/perfil_320px.css">
+    <link rel="stylesheet" href="mediaquery_perfil/perfil_320px.css" media="(min-width: 320px) AND (max-width: 768px)">
 </head>
 
 <body>
@@ -48,7 +48,6 @@
                 </p>
             </div>
         </div>
-
 
         <div class="tiempo ">
             <div class="tiempo-titulo ">
