Acomodando la distribución y tamaño de los elementos en página de perfil que ahora se llama profile

--- a/html/profile.html
+++ b/html/profile.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>Perfil</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mi perfil</title>
+
     <link rel=" stylesheet " href="css/font/flaticon.css ">
     <link rel="icon " href="assets/img/logo-pestaña.ico ">
     <!-- tipo de letra  -->
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
 
-    <!-- estilos -->
-    <!-- <link rel="stylesheet" href="css/perfil.css"> -->
-    <link rel="stylesheet" href="mediaquery_perfil/perfil_320px.css" media="(min-width: 320px) AND (max-width: 768px)">
-    <link rel="stylesheet" href="../mediaquery_perfil/perfil_320px.css">
+    <link rel="stylesheet" href="../mediaquery_perfil/profile.css">
 </head>
 
 <body>
@@ -83,6 +83,7 @@
         </div>
 
     </main>
+
 
     <footer>
 
