--- a/html/profile.html
+++ b/html/profile.html
@@ -12,7 +12,7 @@
     <!-- tipo de letra  -->
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../mediaquery_perfil/profile.css">
+    <link rel="stylesheet" href="../mediaquery_perfil/profile.css" media="(min-width: 320px) AND (max-width: 768px)">
 </head>
 
 <body>
@@ -36,10 +36,10 @@
         <div class="presentacion ">
 
             <div class="logo">
-                <img src="assets/img/Logo.png" alt="Logo de mi empresa">
+                <img src="../assets/img/Logo.png" alt="Logo de mi empresa">
             </div>
             <div class="img ">
-                <img class="img-photo " src="assets/img/Desarrollador.jpg " alt="Foto de desarrollador">
+                <img class="img-photo " src="../assets/img/Desarrollador.jpg " alt="Foto de desarrollador">
             </div>
 
             <div class=" descripcion ">
@@ -90,16 +90,16 @@
         <div class="info-desa ">
             <h3>Desarrollado por Juli&aacute;n España</h3>
             <h3>T&eacute;cnico en sistemas </h3>
-            <h3><img src="assets/img/sena.png " alt=" "></h3>
+            <h3><img src="../assets/img/sena.png " alt=" "></h3>
             <h3>Colón, Putumayo</h3>
         </div>
 
         <div class="social-desa ">
             <h2>Cont&aacute;ctame:</h2>
             <h3>julii1295@gmail.com</h3>
-            <a href="https://www.facebook.com/alex.rio20/ " target="_blank "><img src="assets/img/facebook.png " alt="Imagen de red social Facebook " title="Mi perfil en Facebook "></a>
-            <a href="https://twitter.com/julialexes " target="_blank "><img src="assets/img/twitter.png " alt=" "></a>
-            <a href="https://wa.me/c/573174503604 "><img src="assets/img/whatsapp.png " alt=" "></a>
+            <a href="https://www.facebook.com/alex.rio20/ " target="_blank "><img src="../assets/img/facebook.png " alt="Imagen de red social Facebook " title="Mi perfil en Facebook "></a>
+            <a href="https://twitter.com/julialexes " target="_blank "><img src="../assets/img/twitter.png " alt=" "></a>
+            <a href="https://wa.me/c/573174503604 "><img src="../assets/img/whatsapp.png " alt=" "></a>
         </div>
 
     </footer>
