Cambiando a direcciones correctas

--- a/html/profile.html
+++ b/html/profile.html
@@ -21,10 +21,10 @@
     <header class="contenedor-header">
 
         <div class="header1 ">
-            <a href="index.html " class="inicio ">Inicio</a>
+            <a href="../index.html" class="inicio ">Inicio</a>
         </div>
         <div class="header1 ">
-            <a href="store.html " class="inicio ">Tienda</a>
+            <a href="store.html" class="inicio ">Tienda</a>
         </div>
         <div class="header1 ">
             <a href="blogs.html" class="inicio ">Mi Blog</a>
