--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             <div class="enlaces">
 
                 <div class="home-main-button">
-                    <a href="perfil.html">Mi perfil</a>
+                    <a href="html/profile.html">Mi perfil</a>
                 </div>
 
                 <div class="home-main-button ">
-                    <a href="store.html">Tienda</a>
+                    <a href="html/store.html">Tienda</a>
                 </div>
 
                 <!-- <div class="show">
