--- a/html/store.html
+++ b/html/store.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tienda</title>
     <!-- <link rel="stylesheet" href="css/store.css"> -->
-    <link rel="stylesheet" href="mediaquery_store/media_320px.css" media="(min-width: 320px) AND (max-width: 768px)">
+    <link rel="stylesheet" href="../mediaquery_store/media_320px.css" media="(min-width: 320px) AND (max-width: 768px)">
 
     <link rel="icon" href="assets/img/logo-pestaña.ico">
     <link rel="stylesheet" href="css/font/flaticon.css">
@@ -22,7 +22,7 @@
         <div id="menu-h">
             <ul>
                 <li>
-                    <a href="index.html" class="inicio">Inicio</a>
+                    <a href="../index.html" class="inicio">Inicio</a>
                 </li>
             </ul>
         </div>
@@ -86,7 +86,7 @@
     <main class="contenido">
 
         <div class="logo">
-            <img src="assets/img/logo-pestaña.png" alt="">
+            <img src="../assets/img/logo-pestaña.png" alt="">
         </div>
 
         <div class="presentacion">
@@ -123,27 +123,27 @@
 
                     <div class="accesorio-celular">
                         <h3>Tarjeta de memoria 16 gigas</h3>
-                        <img src="assets/img/ArticulosChina/SanDisk16/1san.jpg" alt="" title="Antena TP-Link USB wifi">
+                        <img src="../assets/img/ArticulosChina/SanDisk16/1san.jpg" alt="" title="Antena TP-Link USB wifi">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-celular">
                         <h3>Cargador Tipo V</h3>
-                        <img src="assets/img/Otros artículos/CargadorMotorla/2.png" alt="">
+                        <img src="../assets/img/Otros artículos/CargadorMotorla/2.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-celular">
                         <h3>Funda de silicona para iPhone</h3>
-                        <img src="assets/img/ArticulosChina/fundaSiliconaiPhone/1172719552-1218911102.jpg" alt="">
+                        <img src="../assets/img/ArticulosChina/fundaSiliconaiPhone/1172719552-1218911102.jpg" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-celular">
                         <h3>Cable Carga Rápida Tipo V</h3>
-                        <img src="assets/img/ArticulosChina/cargadorcelularusb/3327367131298838601.jpg" alt="">
+                        <img src="../assets/img/ArticulosChina/cargadorcelularusb/3327367131298838601.jpg" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-celular">
                         <h3>Cable USB Carga Rápida para iPhone</h3>
-                        <img src="assets/img/ArticulosChina/CableusbiPhone/3.jpg" alt="">
+                        <img src="../assets/img/ArticulosChina/CableusbiPhone/3.jpg" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
 
@@ -156,67 +156,67 @@
 
                     <div class="accesorio-pc">
                         <h3>Cable USB 3.0 extensor </h3>
-                        <img src="assets/img/ArticulosChina/adaptadorusb/3.jpg" alt="" title="Antena TP-Link USB wifi">
+                        <img src="../assets/img/ArticulosChina/adaptadorusb/3.jpg" alt="" title="Antena TP-Link USB wifi">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>Cargador Lenovo Serie G-40</h3>
-                        <img src="assets/img/ArticulosChina/cargadorLenovo/2.jpg" alt="">
+                        <img src="../assets/img/ArticulosChina/cargadorLenovo/2.jpg" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>USB 3.0 16 gigas</h3>
-                        <img src="assets/img/ArticulosChina/memoriausb3.0/1.png" alt="">
+                        <img src="../assets/img/ArticulosChina/memoriausb3.0/1.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>Micr&oacute;fono</h3>
-                        <img src="assets/img/ArticulosChina/Microfono/1.jpg" alt="">
+                        <img src="../assets/img/ArticulosChina/Microfono/1.jpg" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>Memoria RAM 2gb</h3>
-                        <img src="assets/img/ArticulosChina/ram2gb/ram3.JPG" alt="">
+                        <img src="../assets/img/ArticulosChina/ram2gb/ram3.JPG" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>Mouse inal&aacute;mbrico</h3>
-                        <img src="assets/img/ArticulosChina/Ratóninalámbrico/1.png" alt="">
+                        <img src="../assets/img/ArticulosChina/Ratóninalámbrico/1.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>Teclado Genius básico</h3>
-                        <img src="assets/img/ArticulosChina/teclado/2.png" alt="">
+                        <img src="../assets/img/ArticulosChina/teclado/2.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>Adaptador USB para WiFi</h3>
-                        <img src="assets/img/ArticulosCali/AdaptadorWifiUSB/2.png" alt="">
+                        <img src="../assets/img/ArticulosCali/AdaptadorWifiUSB/2.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>Batería recargable</h3>
-                        <img src="assets/img/ArticulosCali/Bateríaportátil/3.png" alt="">
+                        <img src="../assets/img/ArticulosCali/Bateríaportátil/3.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>Mouse inal&aacute;mbrico</h3>
-                        <img src="assets/img/ArticulosChina/Ratóninalámbrico/1.png" alt="">
+                        <img src="../assets/img/ArticulosChina/Ratóninalámbrico/1.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>Mouse LogiTech al&aacute;mbrico</h3>
-                        <img src="assets/img/ArticulosCali/MouseM90/2.png" alt="">
+                        <img src="../assets/img/ArticulosCali/MouseM90/2.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>Router TP-Link WR840 </h3>
-                        <img src="assets/img/ArticulosCali/RouterTP-LinkWR840/1.png" alt="">
+                        <img src="../assets/img/ArticulosCali/RouterTP-LinkWR840/1.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                     <div class="accesorio-pc">
                         <h3>Router TP-Link WR940N </h3>
-                        <img src="assets/img/ArticulosCali/RouterTP-LinkWR940N/1.png" alt="">
+                        <img src="../assets/img/ArticulosCali/RouterTP-LinkWR940N/1.png" alt="">
                         <a href="https://www.facebook.com/alex.rio20/" target="_blank">Comprar</a>
                     </div>
                 </div>
@@ -234,15 +234,15 @@
                         <div class="windows-distribuciones">
                             <div class="sistemas">
                                 <h4>Windows 7</h4>
-                                <img src="assets/img/sistemas/windows/w7.png" alt="">
+                                <img src="../assets/img/sistemas/windows/w7.png" alt="">
                             </div>
                             <div class="sistemas">
                                 <h4>Windows 8.1</h4>
-                                <img src="assets/img/sistemas/windows/w8.1.png" alt="">
+                                <img src="../assets/img/sistemas/windows/w8.1.png" alt="">
                             </div>
                             <div class="sistemas">
                                 <h4>Windows 10</h4>
-                                <img src="assets/img/sistemas/windows/w10.png" alt="">
+                                <img src="../assets/img/sistemas/windows/w10.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -254,35 +254,35 @@
                         <div class="linux-distribuciones">
                             <div class="sistemas">
                                 <h4>Ubuntu</h4>
-                                <img src="assets/img/sistemas/linux/ubuntu.png" alt="">
+                                <img src="../assets/img/sistemas/linux/ubuntu.png" alt="">
                             </div>
                             <div class="sistemas">
                                 <h4>Debian</h4>
-                                <img src="assets/img/sistemas/linux/debian.png" alt="">
+                                <img src="../assets/img/sistemas/linux/debian.png" alt="">
                             </div>
                             <div class="sistemas">
                                 <h4>Linux Mint</h4>
-                                <img src="assets/img/sistemas/linux/mint.png" alt="">
+                                <img src="../assets/img/sistemas/linux/mint.png" alt="">
                             </div>
                             <div class="sistemas">
                                 <h4>KDE Neon</h4>
-                                <img src="assets/img/sistemas/linux/kde_neon.png" alt="">
+                                <img src="../assets/img/sistemas/linux/kde_neon.png" alt="">
                             </div>
                             <div class="sistemas">
                                 <h4>Arch Linux</h4>
-                                <img src="assets/img/sistemas/linux/arch.png" alt="">
+                                <img src="../assets/img/sistemas/linux/arch.png" alt="">
                             </div>
                             <div class="sistemas">
                                 <h4>Manjaro</h4>
-                                <img src="assets/img/sistemas/linux/manjaro.png" alt="">
+                                <img src="../assets/img/sistemas/linux/manjaro.png" alt="">
                             </div>
                             <div class="sistemas">
                                 <h4>Suse</h4>
-                                <img src="assets/img/sistemas/linux/suse.png" alt="">
+                                <img src="../assets/img/sistemas/linux/suse.png" alt="">
                             </div>
                             <div class="sistemas">
                                 <h4>Fedora</h4>
-                                <img src="assets/img/sistemas/linux/fedora.png" alt="">
+                                <img src="../assets/img/sistemas/linux/fedora.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -516,16 +516,16 @@
         <div class="info-desa">
             <h3>Desarrollado por Juli&aacute;n España</h3>
             <h3>T&eacute;cnico en sistemas </h3>
-            <h3><img src="assets/img/sena.png" alt=""></h3>
+            <h3><img src="../assets/img/sena.png" alt=""></h3>
             <h3>Colón, Putumayo</h3>
         </div>
 
         <div class="social-desa">
             <h1>Cont&aacute;ctame:</h1>
             <h3>julii1295@gmail.com</h3>
-            <a href="https://www.facebook.com/alex.rio20/" target="_blank"><img src="assets/img/facebook.png" alt="Imagen de red social Facebook" title="Mi perfil en Facebook"></a>
-            <a href="https://twitter.com/julialexes" target="_blank"><img src="assets/img/network/twitter.svg" alt="Imagen de red social Twitter" title="Mi perfil en Twitter"></a>
-            <a href="https://wa.me/c/573174503604"><img src="assets/img/whatsapp.png" alt="Imagen de red social de whatsapp" title="Mi cuenta de whatsapp"></a>
+            <a href="https://www.facebook.com/alex.rio20/" target="_blank"><img src="../assets/img/facebook.png" alt="Imagen de red social Facebook" title="Mi perfil en Facebook"></a>
+            <a href="https://twitter.com/julialexes" target="_blank"><img src="../assets/img/network/twitter.svg" alt="Imagen de red social Twitter" title="Mi perfil en Twitter"></a>
+            <a href="https://wa.me/c/573174503604"><img src="../assets/img/whatsapp.png" alt="Imagen de red social de whatsapp" title="Mi cuenta de whatsapp"></a>
             <!-- <div class="logo">
                 <img src="assets/img/logo-pestaña.png" alt="Logo de mi empresa" title="IntellArtStore">
             </div> -->
