--- a/html/store.html
+++ b/html/store.html
@@ -86,7 +86,7 @@
     <main class="contenido">
 
         <div class="logo">
-            <img src="../assets/img/logo-pestaña.png" alt="">
+            <img src="../assets/img/Logo.png" alt="Logo de la tienda">
         </div>
 
         <div class="presentacion">
