--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="utf-8">
     <title>Inicio</title>
-    <!-- <link rel="stylesheet" href="css/index.css"> -->
-    <link rel="stylesheet" href="mediaquery_index/media_320px.css">
-    <link rel="stylesheet" href="css/font/flaticon.css">
+    <!-- <link rel="stylesheet" href="css/font/flaticon.css"> -->
     <link rel="icon" href="assets/img/logo-pestaña.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+
+    <!-- <link rel="stylesheet" href="css/index-copy.css"> -->
+    <link rel="stylesheet" href="mediaquery_index/media_320px.css" media="(min-width: 320px) AND (max-width: 768px)">
+    <!-- media="(min-width: 320px) AND (max-width: 768px)" -->
 </head>
 
 <body>
