Acomodando vista para tamaño desde 700px

--- a/html/profile.html
+++ b/html/profile.html
@@ -12,7 +12,9 @@
     <!-- tipo de letra  -->
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../mediaquery_perfil/profile.css" media="(min-width: 320px) AND (max-width: 768px)">
+    <link rel="stylesheet" href="../mediaquery_perfil/profile.css" media="(min-width: 320px)">
+    <!-- AND (max-width: 768px) -->
+    <link rel="stylesheet" href="../mediaquery_perfil/tablet.css" media="(min-width: 700px)">
 </head>
 
 <body>
@@ -33,11 +35,11 @@
 
     <main class="contenido ">
 
+        <div class="logo">
+            <img src="../assets/img/Logo.png" alt="Logo de mi empresa">
+        </div>
         <div class="presentacion ">
 
-            <div class="logo">
-                <img src="../assets/img/Logo.png" alt="Logo de mi empresa">
-            </div>
             <div class="img ">
                 <img class="img-photo " src="../assets/img/Desarrollador.jpg " alt="Foto de desarrollador">
             </div>
