--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 
-    <!-- <link rel="stylesheet" href="css/index-copy.css"> -->
-    <link rel="stylesheet" href="mediaquery_index/media_320px.css" media="(min-width: 320px) AND (max-width: 768px)">
-    <!-- media="(min-width: 320px) AND (max-width: 768px)" -->
+    <link rel="stylesheet" href="mediaquery_index/media_320px.css">
+    <link rel="stylesheet" href="mediaquery_index/tablet.css" media="min-width: 600px">
+
 </head>
 
 <body>
