Página lista desde 320px

--- a/html/profile.html
+++ b/html/profile.html
@@ -9,12 +9,16 @@
 
     <link rel=" stylesheet " href="css/font/flaticon.css ">
     <link rel="icon " href="assets/img/logo-pestaña.ico ">
+
+    <!-- logo de pestaña  -->
+    <link rel="icon" href="../assets/img/logo-pestaña.ico">
+
     <!-- tipo de letra  -->
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../mediaquery_perfil/profile.css" media="(min-width: 320px)">
-    <!-- AND (max-width: 768px) -->
-    <link rel="stylesheet" href="../mediaquery_perfil/tablet.css" media="(min-width: 700px)">
+    <link rel="stylesheet" href="../mediaquery_perfil/profile.css">
+
+    <!-- <link rel="stylesheet" href="../mediaquery_perfil/tablet.css" media="(min-width: 700px)"> -->
 </head>
 
 <body>
