--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="mediaquery_index/media_320px.css">
-    <link rel="stylesheet" href="mediaquery_index/tablet.css" media="min-width: 600px">
+    <link rel="stylesheet" href="mediaquery_index/mobile.css" media="(min-width: 320px)">
+    <link rel=" stylesheet " href="mediaquery_index/tablet.css " media="(min-width: 768px)">
 
 </head>
 
@@ -18,24 +18,24 @@
 
     <main>
 
-        <section class="pages">
+        <section class="pages ">
 
-            <div class="home-main-text">
+            <div class="home-main-text ">
                 <p>Bienvenidos a <br><span>My Store</span></p>
             </div>
 
-            <div class="enlaces">
+            <div class="enlaces ">
 
-                <div class="home-main-button">
-                    <a href="html/profile.html">Mi perfil</a>
+                <div class="home-main-button ">
+                    <a href="html/profile.html ">Mi perfil</a>
                 </div>
 
                 <div class="home-main-button ">
-                    <a href="html/store.html">Tienda</a>
+                    <a href="html/store.html ">Tienda</a>
                 </div>
 
-                <!-- <div class="show">
-                    <img src="assets/img/flechaiz.png" alt="">
+                <!-- <div class="show ">
+                    <img src="assets/img/flechaiz.png " alt=" ">
                 </div> -->
             </div>
 
@@ -45,9 +45,9 @@
     </main>
 
     <!-- 
-            <div class="mensaje">
+            <div class="mensaje ">
                 <p>
-                    "Si quieres entender a una persona, no escuches sus palabras, observa su comportamiento"
+                    "Si quieres entender a una persona, no escuches sus palabras, observa su comportamiento "
                     <br><br> Albert Einstein.
                 </p>
             </div> -->
