--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="mediaquery_index/mobile.css" media="(min-width: 320px)">
-    <link rel=" stylesheet " href="mediaquery_index/tablet.css " media="(min-width: 768px)">
+    <!-- <link rel=" stylesheet " href="mediaquery_index/tablet.css " media="(min-width: 768px)"> -->
 
 </head>
 
