--- a/html/store.html
+++ b/html/store.html
@@ -8,7 +8,7 @@
     <!-- <link rel="stylesheet" href="css/store.css"> -->
     <link rel="stylesheet" href="../mediaquery_store/media_320px.css">
 
-    <link rel="icon" href="assets/img/logo-pestaña.ico">
+    <link rel="icon" href="../assets/img/logo-pestaña.ico">
     <link rel="stylesheet" href="css/font/flaticon.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500&display=swap" rel="stylesheet">
