--- a/html/store.html
+++ b/html/store.html
@@ -91,6 +91,44 @@
 
         <div class="presentacion">
 
+            <div class="slider">
+                <div class="slides">
+
+                    <input type="radio" name="radio-btn" id="radio1">
+                    <input type="radio" name="radio-btn" id="radio2">
+                    <input type="radio" name="radio-btn" id="radio3">
+                    <input type="radio" name="radio-btn" id="radio4">
+
+                    <div class="slide first">
+                        <img src="../assets/img/presentacion/p1.gif" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="../assets/img/ArticulosChina/Microfono/1.jpg" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="../assets/img/ArticulosChina/Microfono/2.jpg" alt="">
+                    </div>
+                    <div class="slide">
+                        <img src="../assets/img/ArticulosChina/Microfono/3.jpg" alt="">
+                    </div>
+
+                    <div class="navigation-auto">
+                        <div class="auto-btn1"></div>
+                        <div class="auto-btn2"></div>
+                        <div class="auto-btn3"></div>
+                        <div class="auto-btn4"></div>
+                    </div>
+
+                    <div class="navigation-manual">
+                        <label for="radio1" class="manual-btn"></label>
+                        <label for="radio2" class="manual-btn"></label>
+                        <label for="radio3" class="manual-btn"></label>
+                        <label for="radio4" class="manual-btn"></label>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 
             <div class="preacce p1">
             </div>
             <div class="preacce p2">
@@ -103,7 +141,10 @@
             </div>
             <div class="btn dere">
                 &gt;
-            </div>
+            </div> 
+            -->
+
+
             <!-- 
             <ul class="page">
                 <li>⁕</li>
