Falta posicionar los botones

--- a/html/store.html
+++ b/html/store.html
@@ -365,6 +365,21 @@
     </main>
 
     <script>
+        // --------------------------------------------------
+        // script para presentacion
+
+        var counter = 1;
+        setInterval(function() {
+            document.getElementById('radio' + counter).checked = true;
+            counter++;
+            if (counter > 4) {
+                counter = 1;
+            }
+        }, 5000)
+
+        // --------------------------------------------------
+
+
         //menu lateral en 768px
         const header = document.querySelector('.header');
         const burgerMenu = document.querySelector('#burger-menu');
