--- a/html/store.html
+++ b/html/store.html
@@ -128,30 +128,6 @@
                 </div>
             </div>
 
-            <!-- 
-            <div class="preacce p1">
-            </div>
-            <div class="preacce p2">
-            </div>
-            <div class="preacce p3">
-            </div>
-
-            <div class="btn iz">
-                &lt;
-            </div>
-            <div class="btn dere">
-                &gt;
-            </div> 
-            -->
-
-
-            <!-- 
-            <ul class="page">
-                <li>⁕</li>
-                <li>⁕</li>
-                <li>⁕</li>
-            </ul> -->
-
         </div>
 
         <div class="mi_trabajo">
@@ -333,31 +309,41 @@
                     <div class="titulo">
                         <h2>Programas b&aacute;sicos</h2>
                     </div>
-                    <div class="programas-contenedor">
+                    <div class="slider">
+                        <div class="slides">
 
-                        <div class="programas-varios c1">
+                            <input type="radio" name="radio-btn" id="ratio1">
+                            <input type="radio" name="radio-btn" id="ratio2">
+                            <input type="radio" name="radio-btn" id="ratio3">
+                            <input type="radio" name="radio-btn" id="ratio4">
+
+                            <div class="slide first">
+                                <img src="../assets/img/presentacion/p1.gif" alt="">
+                            </div>
+                            <div class="slide">
+                                <img src="../assets/img/ArticulosChina/Microfono/1.jpg" alt="">
+                            </div>
+                            <div class="slide">
+                                <img src="../assets/img/ArticulosChina/Microfono/2.jpg" alt="">
+                            </div>
+                            <div class="slide">
+                                <img src="../assets/img/ArticulosChina/Microfono/3.jpg" alt="">
+                            </div>
+
+                            <div class="navigation-auto">
+                                <div class="aut-btn1"></div>
+                                <div class="aut-btn2"></div>
+                                <div class="aut-btn3"></div>
+                                <div class="aut-btn4"></div>
+                            </div>
+
+                            <div class="navigation-manual">
+                                <label for="ratio1" class="manual-btn"></label>
+                                <label for="ratio2" class="manual-btn"></label>
+                                <label for="ratio3" class="manual-btn"></label>
+                                <label for="ratio4" class="manual-btn"></label>
+                            </div>
                         </div>
-
-                        <div class="programas-varios c2">
-                        </div>
-
-                        <div class="programas-varios c3">
-                        </div>
-
-                        <div class="boton izquierda">
-                            &lt;
-                        </div>
-
-                        <div class="boton derecha">
-                            &gt;
-                        </div>
-
-                        <ul class="paginacion">
-                            <li>1</li>
-                            <li>2</li>
-                            <li>3</li>
-                        </ul>
-
                     </div>
                 </div>
             </div>
