--- a/html/store.html
+++ b/html/store.html
@@ -309,42 +309,36 @@
                     <div class="titulo">
                         <h2>Programas b&aacute;sicos</h2>
                     </div>
-                    <div class="pasar">
-                        <div class="pasar-contenido">
 
-                            <input type="radio" name="radio-btn" id="ratio1">
-                            <input type="radio" name="radio-btn" id="ratio2">
-                            <input type="radio" name="radio-btn" id="ratio3">
-                            <input type="radio" name="radio-btn" id="ratio4">
+                    <ul class="programas-presentacion">
+                        <li id="slide-pre1">
+                            <img src="../assets/img/programs/chrome.jpg" alt="">
+                        </li>
+                        <li id="slide-pre1">
+                            <img src="../assets/img/programs/chrome.jpg" alt="">
+                        </li>
+                        <li id="slide-pre1">
+                            <img src="../assets/img/programs/chrome.jpg" alt="">
+                        </li>
+                        <li id="slide-pre1">
+                            <img src="../assets/img/programs/chrome.jpg" alt="">
+                        </li>
+                    </ul>
 
-                            <div class="slide-img first">
-                                <img src="../assets/img/presentacion/p1.gif" alt="">
-                            </div>
-                            <div class="slide-img">
-                                <img src="../assets/img/ArticulosChina/Microfono/1.jpg" alt="">
-                            </div>
-                            <div class="slide-img">
-                                <img src="../assets/img/ArticulosChina/Microfono/2.jpg" alt="">
-                            </div>
-                            <div class="slide-img">
-                                <img src="../assets/img/ArticulosChina/Microfono/3.jpg" alt="">
-                            </div>
-
-                            <div class="navegacion-auto">
-                                <div class="boton-auto1"></div>
-                                <div class="boton-auto2"></div>
-                                <div class="boton-auto3"></div>
-                                <div class="boton-auto4"></div>
-                            </div>
-
-                            <div class="navegacion-manual">
-                                <label for="ratio1" class="boton-manual"></label>
-                                <label for="ratio2" class="boton-manual"></label>
-                                <label for="ratio3" class="boton-manual"></label>
-                                <label for="ratio4" class="boton-manual"></label>
-                            </div>
-                        </div>
-                    </div>
+                    <ul class="menu-programas">
+                        <li>
+                            <a href="#slide-pre1">1</a>
+                        </li>
+                        <li>
+                            <a href="#slide-pre2">2</a>
+                        </li>
+                        <li>
+                            <a href="#slide-pre3">3</a>
+                        </li>
+                        <li>
+                            <a href="#slide-pre4">4</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -361,18 +355,6 @@
             counter++;
             if (counter > 4) {
                 counter = 1;
-            }
-        }, 5000)
-
-        //Scrip para programas básicos
-
-        let counter_2 = 1;
-
-        setInterval(function() {
-            document.getElementById('ratio' + counter_2).checked = true;
-            counter_2++;
-            if (counter_2 > 4) {
-                counter_2 = 1;
             }
         }, 5000)
 
@@ -519,8 +501,8 @@
         <div class="info-desa">
             <h3>Desarrollado por Juli&aacute;n España</h3>
             <h3>T&eacute;cnico en sistemas </h3>
-            <h3><img src="../assets/img/sena.png" alt=""></h3>
             <h3>Colón, Putumayo</h3>
+            <!-- <h3><img src="../assets/img/sena.png" alt=""></h3> -->
         </div>
 
         <div class="social-desa">
